solved a few issues.. logo, hidding insidemenu in two layouts

--- a/index.html
+++ b/index.html
@@ -119,10 +119,12 @@
                   id="id_dropdown-content4"
                 ></div>
               </div>
-              <div class="sog">
-                <button class="searchbtn" onclick="openSearch()">SØG</button>
+              <div class="sog dropdown0">
+                <button class="searchbtn dropbtn0" onclick="openSearch()">
+                  SØG
+                </button>
               </div>
-              <div class="dropdown5 dropdown0">
+              <div class="dropdown5 dropdown0 menuinside">
                 <button class="dropbtn5 dropbtn0" onclick="menu_open()">
                   MENU<i class="bi bi-list"></i>
                 </button>
