--- a/kontakt.html
+++ b/kontakt.html
@@ -26,16 +26,6 @@
   </head>
   <body>
     <div class="container">
-
-      <div class="header">
-        <div class="headerlogo">
-          <div class="logo">
-            <div class="logoimg" id="loppe">
-              <img src="assets/loppelogonew.svg" alt="loppen logo" />
-            </div>
-            <div class="logotext">
-              <a class="logolink" href="index.html">
-
       <header>
         <div class="header">
           <div class="headerlogo">
@@ -52,7 +42,7 @@
                   <p>CHRISTIANIA</p>
                 </div>
 
-              </a>
+              
 
               </div>
               <div class="bluebox"></div>
@@ -136,160 +126,67 @@
             </div>
           </nav>
         </div>
-
-      </div>
-      <section>
-        <div class="kontaktpage">
-          <h2>KONTAKT</h2>
-          <p><strong>MUSIK LOPPEN</strong></p>
-          <p>Sydområdet 4B, 1. sal</p>
-          <p>1440 København K.</p>
-          <p><strong>CVR:</strong> 10303702</p>
-          <p><strong>Tel:</strong> (+45) 3257 8422</p>
-          <p>
-            <strong>Office hours:</strong> Monday to Friday from 10.00-14.00
-          </p>
-          <p class="contactheading">Booking</p>
-          <p class="contactname">
-            Jasper 'Japser' Jensen / <em>loppen@loppen.dk</em>
-          </p>
-          <p>Please remember to include links to your music and socials.</p>
-          <p class="contactheading">Communication & Administration</p>
-          <p class="contactname">
-            Michelle Therese Smidt /<em>michelle@loppen.dk</em>
-          </p>
-          <p class="contactheading">PR & Marketing</p>
-          <p class="contactname">
-            Anne Kirstine Knudsen /<em>anne@loppen.dk</em>
-          </p>
-          <p class="contactheading">Production</p>
-          <p class="contactname">Mina Göl Bertelsen /<em>mina@loppen.dk</em></p>
-          <p class="contactheading">Accounting & Finance</p>
-          <p class="contactname">Jesper Jensen /<em>okonomi@loppen.dk</em></p>
-          <p class="contactheading">Service</p>
-          <p class="contactname">
-            Ann-Sofie Lundsholm /<em>ann-sofie@loppen.dk</em>
-          </p>
-          <p class="contactheading">Bar</p>
-          <p class="contactname">Theis Thomsen /</p>
-          <p class="contactheading">
-            The music association Loppens board consists of:
-          </p>
-          <p class="contactname">
-            Helle Elena Andersen, <em>Head of board</em>
-          </p>
-          <p>
-            Former head of secretarie at Spillesteder.dk (now Dansk Live) as
-            well as 10 years as chairman of the patient association and 8 years
-            as audience representative in Copenhagen's Music Committee.
-          </p>
-          <p class="contactname">Susanne Romlund, <em>Treasurer</em></p>
-          <p>Self-employed accountant</p>
-          <p class="contactname">Janus Larsen, <em>Member of the Board</em></p>
-          <p>Soon-to-be accountant</p>
-          <p class="contactname">Saionara Reis, <em>Member of the Board</em></p>
-          <p>
-            Specialist consultant in human rights and sustainable development at
-            the Institute for Human Rights.
-          </p>
-          <p class="contactname">
-            Pernille Hagen Hess, <em>Member of the Board</em>
-          </p>
-          <p>Pedagogue</p>
-          <p class="contactname">
-            Bjørn Winterskov, <em>Member of the Board</em>
-          </p>
-          <p>
-            Land surveyor and co-responsible for operations in The Grey Hall /
-            Den Grå Hal.
-          </p>
-          <p class="contactname">
-            Niels Vagn Brodahl, <em>Member of the Board</em>
-          </p>
-          <p>Designer and performer</p>
-          <h3>Social Media</h3>
-          <p>
-            <strong>Facebook: </strong
-            ><a href="http://www.facebook.com/musikloppen"
-              >www.facebook.com/musikloppen</a
-            >
-          </p>
-          <p>
-            <strong>Instagram: </strong
-            ><a href="http://www.instagram.com/musikloppen"
-              >www.instagram.com/musikloppen</a
-            >
-          </p>
-          <p class="contactheading">
-            Loppen er støttet af Statens Kunstfond og Københavns Kommune Kultur-
-            og Fritidsudvalg.
-          </p>
-        </div>
-      </section>
-
-
       </header>
-  <header>
-      <div class="kontaktpage">
-        <h2>KONTAKT</h2>
-        <p><strong>MUSIK LOPPEN</strong></p>
-        <p>Sydområdet 4B, 1. sal</p>
-        <p>1440 København K.</p>
-        <p><strong>CVR:</strong> 10303702</p>
-        <p><strong>Tel:</strong> (+45) 3257 8422</p>
-        <p><strong>Office hours:</strong> Monday to Friday from 10.00-14.00</p>
-        <p class="contactheading">Booking</p>
-        <p class="contactname">Jasper 'Japser' Jensen / <em>loppen@loppen.dk</em></p>
-        <p>Please remember to include links to your music and socials.</p>
-        <p class="contactheading">Communication & Administration</p>
-        <p class="contactname">Michelle Therese Smidt /<em>michelle@loppen.dk</em></p>
-        <p class="contactheading">PR & Marketing</p>
-        <p class="contactname">Anne Kirstine Knudsen /<em>anne@loppen.dk</em></p>
-        <p class="contactheading">Production</p>
-        <p class="contactname">Mina Göl Bertelsen /<em>mina@loppen.dk</em></p>
-        <p class="contactheading">Accounting & Finance</p>
-        <p class="contactname">Jesper Jensen /<em>okonomi@loppen.dk</em></p>
-        <p class="contactheading">Service</p>
-        <p class="contactname">Ann-Sofie Lundsholm /<em>ann-sofie@loppen.dk</em></p>
-        <p class="contactheading">Bar</p>
-        <p class="contactname">Theis Thomsen /</p>
-        <p class="contactheading">The music association Loppens board consists of: </p>
-        <p class="contactname">Helle Elena Andersen, <em>Head of board</em></p>
-        <p>Former head of secretarie at Spillesteder.dk (now Dansk Live) as well as 10 years as chairman of the patient association and 8 years as audience representative in Copenhagen's Music Committee.</p>
-        <p class="contactname">Susanne Romlund, <em>Treasurer</em></p>
-        <p>Self-employed accountant</p>
-        <p class="contactname">Janus Larsen, <em>Member of the Board</em></p>
-        <p>Soon-to-be accountant</p>
-        <p class="contactname">Saionara Reis, <em>Member of the Board</em></p>
-        <p>Specialist consultant in human rights and sustainable development at the Institute for Human Rights.</p>
-        <p class="contactname">Pernille Hagen Hess, <em>Member of the Board</em></p>
-        <p>Pedagogue</p>
-        <p class="contactname">Bjørn Winterskov, <em>Member of the Board</em></p>
-        <p>Land surveyor and co-responsible for operations in The Grey Hall / Den Grå Hal.</p>
-        <p class="contactname">Niels Vagn Brodahl, <em>Member of the Board</em></p>
-        <p>Designer and performer</p>
-        <h3>Social Media</h3>
-        <p><strong>Facebook: </strong><a href="http://www.facebook.com/musikloppen">www.facebook.com/musikloppen</a></p>
-        <p><strong>Instagram: </strong><a href="http://www.instagram.com/musikloppen">www.instagram.com/musikloppen</a></p>
-        <p class="contactheading">Loppen er støttet af Statens Kunstfond og Københavns Kommune Kultur- og Fritidsudvalg.</p>
-
-
-      </div>
-    </main>
-    <footer>
-
-      <div class="footer">
-        <div class="socialmedia">
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-x-twitter"></i>
-          <i class="fa-brands fa-facebook"></i>
+        <main>
+          <section>
+            <div class="kontaktpage">
+              <h2>KONTAKT</h2>
+              <p><strong>MUSIK LOPPEN</strong></p>
+              <p>Sydområdet 4B, 1. sal</p>
+              <p>1440 København K.</p>
+              <p><strong>CVR:</strong> 10303702</p>
+              <p><strong>Tel:</strong> (+45) 3257 8422</p>
+              <p><strong>Office hours:</strong> Monday to Friday from 10.00-14.00</p>
+              <p class="contactheading">Booking</p>
+              <p class="contactname">Jasper 'Japser' Jensen / <em>loppen@loppen.dk</em></p>
+              <p>Please remember to include links to your music and socials.</p>
+              <p class="contactheading">Communication & Administration</p>
+              <p class="contactname">Michelle Therese Smidt /<em>michelle@loppen.dk</em></p>
+              <p class="contactheading">PR & Marketing</p>
+              <p class="contactname">Anne Kirstine Knudsen /<em>anne@loppen.dk</em></p>
+              <p class="contactheading">Production</p>
+              <p class="contactname">Mina Göl Bertelsen /<em>mina@loppen.dk</em></p>
+              <p class="contactheading">Accounting & Finance</p>
+              <p class="contactname">Jesper Jensen /<em>okonomi@loppen.dk</em></p>
+              <p class="contactheading">Service</p>
+              <p class="contactname">Ann-Sofie Lundsholm /<em>ann-sofie@loppen.dk</em></p>
+              <p class="contactheading">Bar</p>
+              <p class="contactname">Theis Thomsen /</p>
+              <p class="contactheading">The music association Loppens board consists of: </p>
+              <p class="contactname">Helle Elena Andersen, <em>Head of board</em></p>
+              <p>Former head of secretarie at Spillesteder.dk (now Dansk Live) as well as 10 years as chairman of the patient association and 8 years as audience representative in Copenhagen's Music Committee.</p>
+              <p class="contactname">Susanne Romlund, <em>Treasurer</em></p>
+              <p>Self-employed accountant</p>
+              <p class="contactname">Janus Larsen, <em>Member of the Board</em></p>
+              <p>Soon-to-be accountant</p>
+              <p class="contactname">Saionara Reis, <em>Member of the Board</em></p>
+              <p>Specialist consultant in human rights and sustainable development at the Institute for Human Rights.</p>
+              <p class="contactname">Pernille Hagen Hess, <em>Member of the Board</em></p>
+              <p>Pedagogue</p>
+              <p class="contactname">Bjørn Winterskov, <em>Member of the Board</em></p>
+              <p>Land surveyor and co-responsible for operations in The Grey Hall / Den Grå Hal.</p>
+              <p class="contactname">Niels Vagn Brodahl, <em>Member of the Board</em></p>
+              <p>Designer and performer</p>
+              <h3>Social Media</h3>
+              <p><strong>Facebook: </strong><a href="http://www.facebook.com/musikloppen">www.facebook.com/musikloppen</a></p>
+              <p><strong>Instagram: </strong><a href="http://www.instagram.com/musikloppen">www.instagram.com/musikloppen</a></p>
+              <p class="contactheading">Loppen er støttet af Statens Kunstfond og Københavns Kommune Kultur- og Fritidsudvalg.</p>
+            </div>
+          </section>
+        </main>
+      <footer>
+        <div class="footer">
+          <div class="socialmedia">
+            <i class="fa-brands fa-instagram"></i>
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-facebook"></i>
+          </div>
+          <div class="footerlinks">
+            <a href="https://www.christiania.org/">Christiania</a>
+            <a href="https://dansklive.dk/">Dansk Live</a>
+          </div>
         </div>
-        <div class="footerlinks">
-          <a href="https://www.christiania.org/">Christiania</a>
-          <a href="https://dansklive.dk/">Dansk Live</a>
-        </div>
-      </div>
-    </footer>
+      </footer>
     </div>
     <script src="javascript.js"></script>
   </body>
